--- a/userPage/component/navbar.html
+++ b/userPage/component/navbar.html
@@ -30,6 +30,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#">History</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="tentangkanmi.html">Tentang Kami</a>
+                </li>
             </ul>
         </div>
     </div>
